--- a/index.html
+++ b/index.html
@@ -49,18 +49,39 @@
     <div class="main">
       <h1>PDF to TXT File Converter</h1>
       <div class="container">
+        <!-- File Upload -->
         <div class="card file-upload" id="drop-area">
           <div class="form-container">
             <img src="images/upload-files.png" alt="Upload files" width="100px">
             <span id="drag-drop">Drag & Drop</span>
-            <form action="form-handler.php" method="post" enctype="multipart/form-data">
+            <form id="form" action="form-handler.php" method="post" enctype="multipart/form-data">
               <label for="file">or <span>Browse</span></label>
               <input class="hidden-input" id="file" type="file" name="uploaded-files" multiple accept=".pdf">
             </form>
             <p id="max-file-size">Maximum file size: 5MB</p>
           </div>
         </div>
+        <!-- Uploaded Files -->
         <div class="card" id="file-list">
+          <div id="files-container">
+            <!-- <div class="file">
+              <div class="file-name">
+                <img src="/images/file.png" alt="File icon" width="25px" height="25px">
+                <p>file_1.txt</p>
+              </div>
+              <div class="file-size">
+                <p>3MB</p>
+                <span class="material-symbols-outlined">
+                  cancel
+                </span>
+              </div>
+            </div> -->
+          </div>
+          <div class="submit">
+            <button form="form" type="submit">
+              Submit
+            </button>
+          </div>
         </div>
       </div>
     </div>
@@ -73,7 +94,8 @@
   document.addEventListener('DOMContentLoaded', function () {
     const dropArea = document.getElementById('drop-area');
     const fileInput = document.getElementById('file');
-    const fileListContainer = document.getElementById('file-list');
+    const fileList = document.getElementById('file-list');
+    const filesContainer = document.getElementById('files-container');
 
     dropArea.addEventListener('dragover', function (e) {
       e.preventDefault();
@@ -97,6 +119,16 @@
       handleFiles(files);
     });
 
+    function formatFileSize(bytes) {
+      const kilobytes = bytes / 1024;
+      if (kilobytes < 1000) {
+        return kilobytes.toFixed(1) + ' KB';
+      } else {
+        const megabytes = kilobytes / 1024;
+        return megabytes.toFixed(2) + ' MB';
+      }
+    }
+
     function handleFiles(files) {
       console.log(files);
       if (files.length > 0) {
@@ -104,34 +136,40 @@
         const isValidFileType = Array.from(files).every(file => allowedTypes.includes(file.type));
 
         if (isValidFileType) {
-          fileListContainer.style.display = 'flex';
-
-          // Retrieve existing file list
-          const existingFileList = fileListContainer.querySelector('ul');
-
-          // Create new list or use existing one
-          const fileList = existingFileList || document.createElement('ul');
-
-          // Convert 'files' to an array
           const filesArray = Array.from(files);
+          fileList.style.display = 'flex';
 
           filesArray.forEach(file => {
-            const listItem = document.createElement('li');
-            listItem.textContent = file.name;
-            fileList.appendChild(listItem);
+            console.log('passed');
+            const fileContainer = document.createElement('div');
+            fileContainer.classList.add('file');
+            const fileNameContainer = document.createElement('div');
+            fileNameContainer.classList.add('file-name');
+            const fileIcon = document.createElement('img');
+            fileIcon.src = 'images/file.png';
+            fileIcon.alt = 'File icon';
+            fileIcon.width = 25;
+            fileNameContainer.appendChild(fileIcon);
+            const fileName = document.createElement('p');
+            fileName.textContent = file.name;
+            fileNameContainer.appendChild(fileName);
+            fileContainer.appendChild(fileNameContainer);
+            const fileSizeContainer = document.createElement('div');
+            fileSizeContainer.classList.add('file-size');
+            const fileSize = document.createElement('p');
+            fileSize.textContent = formatFileSize(file.size);
+            const deleteIcon = document.createElement('span');
+            deleteIcon.classList.add('material-symbols-outlined');
+            deleteIcon.textContent = 'cancel';
+            fileSizeContainer.appendChild(fileSize);
+            fileSizeContainer.appendChild(deleteIcon);
+            fileContainer.appendChild(fileSizeContainer);
+            filesContainer.appendChild(fileContainer);
           });
-
-          // Replace existing file list or append new list
-          if (!existingFileList) {
-            fileListContainer.appendChild(fileList);
-          }
         } else {
-          fileListContainer.style.display = 'none';
           alert('Invalid file type. Please upload only PDF files.');
         }
-      } else {
-        fileListContainer.style.display = 'none';
       }
     }
-  })
+  });
 </script>
