--- a/index.html
+++ b/index.html
@@ -85,24 +85,51 @@
                     </div> -->
                 </div>
                 <div class="submit">
-                    <button type="submit" id="submit" name="upload">
-                        Convert
-                    </button>
+                    <form id="conversionForm" action="" method="post">
+                        <input type="hidden" name="conversionType" value="pdf2txt">
+                        <button type="button" id="convertButton">
+                            Convert
+                        </button>
+                    </form>
                 </div>
+<!--                <div class="submit">-->
+<!--                    <button type="button" id="convertButton">-->
+<!--                        Convert-->
+<!--                    </button>-->
+<!--                </div>-->
             </div>
         </div>
     </div>
 </main>
-<script>
-    window.onload = function () {
-        // JavaScript to trigger file deletion when the page loads
-        var xhr = new XMLHttpRequest();
-        xhr.open('GET', 'sender.php?deleteFiles=true', true);
-        xhr.send();
-    };
-</script>
+<!--<script>-->
+<!--    window.onload = function () {-->
+<!--        // JavaScript to trigger file deletion when the page loads-->
+<!--        var xhr = new XMLHttpRequest();-->
+<!--        xhr.open('GET', 'sender.php?deleteFiles=true', true);-->
+<!--        xhr.send();-->
+<!--    };-->
+
+<!--    document.getElementById("conversionForm").addEventListener("submit", function (event) {-->
+<!--        event.preventDefault(); // Prevent the default form submission behavior-->
+
+<!--        // Your additional logic here, if needed-->
+
+<!--        // Optionally, you can use AJAX to handle the form submission without navigating away from the page-->
+<!--        // For example:-->
+<!--        // var formData = new FormData(document.getElementById("conversionForm"));-->
+<!--        // fetch("sender.php", {-->
+<!--        //     method: "POST",-->
+<!--        //     body: formData-->
+<!--        // })-->
+<!--        // .then(response => response.text())-->
+<!--        // .then(data => console.log(data))-->
+<!--        // .catch(error => console.error(error));-->
+<!--    });-->
+<!--</script>-->
+<p id="retOp"></p>
+<script src="script.js"></script>
+
 </body>
 
 </html>
 
-<script src="script.js"></script>
